--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -36,7 +36,7 @@
 .logoMobile {
   display: none;
 }
-@media (max-device-width: 375px) and (max-device-height: 812px) {
+@media (max-width: 800px) {
   .navbar {
     flex-direction: column;
     font-size: 1rem;
