--- a/src/components/sections/SectionFive.scss
+++ b/src/components/sections/SectionFive.scss
@@ -31,7 +31,7 @@
     margin-right: 1rem;
   }
 }
-@media screen and (max-width: 768px) {
+@media (max-width: 800px)  {
   .section-5-content {
   grid-template-columns: 100%;
   grid-template-rows: 1fr 1fr 1fr;
