--- a/src/components/sections/SectionOne.scss
+++ b/src/components/sections/SectionOne.scss
@@ -29,7 +29,7 @@
     }
   }
 }
-@media (max-device-width: 375px) and (max-device-height: 812px) {
+@media (max-width: 800px) {
   #section-1 {
     display: flex;
     flex-direction: column;
