--- a/src/index.css
+++ b/src/index.css
@@ -11,11 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-@media (max-device-width: 375px) and (max-device-height: 812px) {
+@media (max-width: 800px) {
   body {
-    padding-top: constant(safe-area-inset-top); /* Fallback for iOS 11.0-11.2 */
-    padding-top: env(safe-area-inset-top);
-    padding-bottom: constant(safe-area-inset-bottom); /* Fallback for iOS 11.0-11.2 */
-    padding-bottom: env(safe-area-inset-bottom);
+    padding-top: env(safe-area-inset-top, 1em);
+    padding-right: env(safe-area-inset-right, 1em);
+    padding-bottom: env(safe-area-inset-bottom, 1em);
+    padding-left: env(safe-area-inset-left, 1em);
   }
 }
